--- a/weather-app/src/style.css
+++ b/weather-app/src/style.css
@@ -71,3 +71,8 @@ input {
     height: 53vh;
 }
 
+.errorDisplay{
+    font-size: 2.5rem;
+    font-weight: bold;
+    color: hsla(0, 0%, 0%, 0.75);
+}
